--- a/src/components/TransactionHistory/TransactionHistory.module.css
+++ b/src/components/TransactionHistory/TransactionHistory.module.css
@@ -1,5 +1,28 @@
-.transactionHistory {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+table {
+  margin: 20px auto;
+  table-layout: fixed;
+  width: 50%;
+  border-collapse: collapse;
+  border: 1px solid lightgray;
+  text-align: center;
+}
+
+thead th {
+  width: 33.33%;
+  background-color: lightskyblue;
+  color: white;
+}
+
+th,
+td {
+  padding: 10px;
+  border: 1px solid lightgray;
+}
+
+tbody tr:nth-child(even) {
+  background-color: lightblue;
+}
+
+tbody tr:nth-child(odd) {
+  background-color: white;
 }
