prop types, icons, utils

--- a/src/components/TransactionHistory/TransactionHistory.module.css
+++ b/src/components/TransactionHistory/TransactionHistory.module.css
@@ -4,7 +4,6 @@ table {
   width: 50%;
   border-collapse: collapse;
   border: 1px solid lightgray;
-  text-align: center;
 }
 
 thead th {
@@ -16,11 +15,16 @@ thead th {
 th,
 td {
   padding: 10px;
+
   border: 1px solid lightgray;
 }
 
+td {
+  padding-left: calc((100% / 3 / 2) - 30px);
+}
+
 tbody tr:nth-child(even) {
-  background-color: lightblue;
+  background-color: rgb(232, 241, 245);
 }
 
 tbody tr:nth-child(odd) {
